Update and rename README.md to description

--- a/description
+++ b/description
@@ -1,7 +1,7 @@
 - 👋 Hi, I’m @Doma176
 - 👀 I’m interested = in  programing and surgions and sport like : boxing and mytie and mma and football
 - 🌱 I’m currently =  learning  flutter and full stack web development and games
-- 📫 How to reach me = my email is
+- 📫 How to reach me = my email is :doma926396@gmail.com
 - ⚡ Fun fact = i love books and do sport 
 
 <!---
